--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,10 @@
                                     </select>
                                 </div>
                             </div>
-
+                            <div class="search__block">
+                                <input class="input p-[10px] w-[250px] rounded-[20px] bg-[aquamarine]" type="text"
+                                    name="search" id="search_user" placeholder="search">
+                            </div>
                             <div class="btn_block">
                                 <button
                                     class="border-none text-[14px] font-bold text-[#f2f4fe] bg-[#ad1fea] rounded-[10px] py-[12px] px-[24px]">+
